:art: Updated the navbar to be right aligned and have the correct logo

--- a/assets/src/sass/components/_navbar.scss
+++ b/assets/src/sass/components/_navbar.scss
@@ -216,7 +216,7 @@ nav {
   nav {
     display: flex;
     // LEFT ALIGN? ENABLE THIS
-    //justify-content: flex-end;
+    justify-content: flex-end;
     padding: 0;
     position: relative;
     ul {
@@ -294,7 +294,7 @@ nav {
     margin-right: 10px;
     margin-top: 22px;
     // LEFT ALIGN? DELETE THE POSITION
-    position: absolute;
+
     right: 0;
   }
 
